<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:weightSum="1">

    <TextView
        android:text="Add Hop"
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/hopSelector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.21" />

    <EditText
        android:id="@+id/amount"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/amount"/>
    <EditText
        android:id="@+id/aau"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/aau"
        android:enabled="false"/>
    <EditText
        android:id="@+id/time"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="sans-serif"
        android:hint="@string/boil_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hopType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type" />

        <Spinner
            android:id="@+id/hopTypeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <EditText
        android:id="@+id/hopID"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hop_name"
        android:enabled="false"
        android:visibility="gone"/>

</LinearLayout>